Enabled codemirror support for search.
Enabled codemirror support for search. Accessible with:

Ctrl-F / Cmd-F
    Start searching
Ctrl-G / Cmd-G
    Find next
Shift-Ctrl-G / Shift-Cmd-G
    Find previous
Shift-Ctrl-F / Cmd-Option-F
    Replace
Shift-Ctrl-R / Shift-Cmd-Option-F
    Replace all

Basic dialogs in use for now. Better dialogs and mouse driven access
path (for discoverability) to follow.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script src="assets/js/bootstrap-dropdown.js"></script>
     <script src="assets/js/jquery.layout-latest.js"></script>
     <script src="assets/js/codemirror.js"></script>
+    <script src="assets/js/search.js"></script>
+    <script src="assets/js/searchcursor.js"></script>
     <script src="assets/js/closetag.js"></script>
     <script src="assets/js/xml.js"></script>
     <script src="assets/js/deathstar-editor.js"></script>
