further mods for content spec editor support

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <script src="assets/js/codemirror-dialog.js"></script>
     <script src="assets/js/closetag.js"></script>
     <script src="assets/js/xml.js"></script>
+    <script src="assets/js/deathstar-editor-common.js"></script>
+    <script src="assets/js/pressgang-rest-utils.js"></script>
     <script src="assets/js/deathstar-editor.js"></script>
     <script src="assets/js/topiceditor.js"></script>
   </head>
