moved javascript to deathstar- namespace + various enhancements

--- a/cspec-editor.html
+++ b/cspec-editor.html
@@ -27,10 +27,10 @@
 	<script src="assets/js/closetag.js"></script>
 	<script src="assets/js/xml.js"></script>
 	<script src="assets/js/deathstar-editor-common.js"></script>
-	<script src="assets/js/pressgang-rest-utils.js"></script>
-	<script src="assets/js/cspec-editor.js"></script>
+	<script src="assets/js/deathstar-pressgang-rest-utils.js"></script>
+	<script src="assets/js/deathstar-cspec-editor.js"></script>
   <!--  <script src="assets/js/deathstar-editor.js"></script>
-  <script src="assets/js/topiceditor.js"></script> -->
+  <script src="assets/js/deathstar-topiceditor.js"></script> -->
 </head>
 
 <body onload="specEditorload()">
