various css fixes, by the look of it

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html lang="en-US">
   <head>
     <title>Deathstar Editor</title>
+    <link href="assets/css/default.css" rel="stylesheet">   
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
@@ -8,7 +10,8 @@
     <link href="assets/css/codemirror-dialog.css" rel="stylesheet">
     <link href="assets/css/deathstar.css" rel="stylesheet">
     <link href="assets/css/jquery-ui-1.8.23.custom.css" rel="stylesheet">
-	<link href="assets/css/docs.css" rel="stylesheet">
+<!--	  <link href="assets/css/docs.css" rel="stylesheet"> -->
+
 
     <script type="text/javascript">pageIsEditor=true;</script>
 
