--- a/cspec-editor.html
+++ b/cspec-editor.html
@@ -81,6 +81,11 @@
 						<div class="btn-group">
 							<button class="btn" id="skynet-button" rel="popover" data-original-title="Open in Skynet" data-content="Open the topic in the Skynet editor">Open in Skynet</button>
 						</div>	
+
+						<div class="btn-group">
+							<button id="publish-button" data-loading-text="Publishing..." class="btn btn-danger">Publish</button>
+						</div>	
+
 					</div>
 
 				</div>
